Fix overflow issue on open search sections, to fix issue on dropdowns being hidden

--- a/Interface/resources/sass/sdk/components/_search.scss
+++ b/Interface/resources/sass/sdk/components/_search.scss
@@ -97,6 +97,8 @@
         }
 
         &--open {
+            overflow: visible;
+
             height: auto;
         }
 
